# lume-visualizations

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  start-fake-epics-ioc.sh
.github/workflows/: build-container.yml  check-k8s-vendored.yml
deploy/kubernetes/: configmap-epics-fake.yaml  configmap-epics-real.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  live-monitor.yaml  namespace.yaml  quad-scan-ingress.yaml  quad-scan.yaml
deploy/kubernetes/live-monitor-ui/: dashboard.py  live_monitor_allocator.py  live_stream_monitor.css  live_stream_monitor.head.html  live_stream_monitor.py
lume_visualizations/: __init__.py  beam_monitor.py  cli.py  config.py  dashboard.py  epics_controls.py  fake_epics_ioc.py  live_monitor_pool.py  live_stream_monitor.head.html  live_stream_monitor.py  quad_scan_monitor.py
quad_scan_cu_inj_hxr/: beam_monitor.py  quad_scan_monitor.py
